# wagtail-bakery

./: .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  codecov.yml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml  report_nightly_build_failure.py
.github/workflows/: publish-test.yml  publish.yml  test.yml
docs/: Makefile  getting_started.md  index.md
docs/source/: conf.py  index.rst
docs/source/api/: index.rst
examples/: .gitignore  Makefile  requirements.txt
examples/aws/: Makefile  manage.py  requirements.txt
examples/aws/example/: __init__.py  celery.py  models.py  settings.py  urls.py
examples/aws/example/migrations/: 0001_initial.py
examples/aws/fixtures/: pages.json  sites.json  users.json
examples/example/: urls.py
examples/fixtures/: sites.json
examples/multilingual/example/templates/example/: blog_list_page.html
examples/multilingual/fixtures/: pages.json  sites.json  users.json
examples/multisite/: manage.py  requirements.txt
examples/multisite/example/: models.py  settings.py  urls.py
examples/multisite/example/migrations/: 0001_initial.py
examples/multisite/example/templates/: base.html
examples/multisite/example/templates/example/: blog_post_page.html
examples/multisite/fixtures/: pages.json  users.json
examples/site/: fixture.patch  requirements.txt
examples/site/example/: models.py  settings.py  urls.py
examples/site/example/migrations/: 0001_initial.py
examples/site/example/static/example/css/: main.css
examples/site/example/templates/: base.html
examples/site/fixtures/: pages.json  users.json
src/wagtailbakery/: __init__.py  api_views.py  apps.py  compatibility.py  models.py  signal_handlers.py  views.py
src/wagtailbakery/templates/wagtailbakery/: redirect.html
src/wagtailbakery/tests/: conftest.py  fixtures.py  models.py  settings.py  urls.py
src/wagtailbakery/tests/factories/: __init__.py  page.py
src/wagtailbakery/tests/integration/: test_models.py  test_redirect.py  test_routablepagemixin.py  test_views.py
src/wagtailbakery/tests/migrations/: 0001_initial.py  0002_eventpage.py
src/wagtailbakery/tests/templates/: current_events.html
tests/: conftest.py  fixtures.py  models.py  settings.py  test_build.py  urls.py
tests/factories/: __init__.py  page.py  redirect.py  site.py
tests/integration/: test_api_views.py  test_models.py  test_redirect.py  test_routablepagemixin.py  test_views.py
tests/migrations/: 0001_initial.py  0002_eventpage.py
tests/templates/: events_for_year.html
(+1 files in other folders)
